# vector-db

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  deny.toml  install.sh  package.json
.attractor/: .gitignore  integration.dot
.attractor/nodes/: distill.sh  identify.sh  implement.sh  optimize.sh  validate.sh
.cargo/: audit.toml
.claude/: ecc-tools.json  identity.json  settings.json
.claude/commands/: ci-guard-and-supply-chain-hardening.md  claude-flow-help.md  claude-flow-swarm.md  npm-package-version-bump-and-release.md  sync-readme-and-package-json-to-published-npm.md
.claude/helpers/: github-setup.sh
.codex/: AGENTS.md
.devcontainer/: Dockerfile  devcontainer.json
.devin/: devin.md  setup.sh
.github/: dependabot.yml
.github/workflows/: RELEASE-FLOW.md  RELEASE.md  agentic-synth-ci.yml  artifact-policy.yml  benchmarks.yml  build-attention.yml  build-diskann.yml  build-gnn.yml  build-graph-node.yml  build-graph-transformer.yml  build-native.yml  build-router.yml  build-rvf-node.yml  build-tiny-dancer.yml  build-verified.yml  ci.yml  clippy-fmt.yml  copilot-setup-steps.yml  devcontainer-ghcr.yml  docker-publish.yml  edge-net-models.yml  examples-ui-ci.yml  hailo-backend-audit.yml  hailo-release-artifacts.yml  hooks-ci.yml  mirror-rulake.yml  postgres-extension-ci.yml  publish-all.yml  regression-guard.yml  release-rvf-cli.yml  release.yml  ruvector-postgres-ci.yml  ruvllm-benchmarks.yml  ruvllm-build.yml  ruvllm-esp32-firmware.yml  ruvllm-native.yml  ruvltra-tests.yml  self-learning.yml  sona-napi.yml  supply-chain.yml  (+5 more)
.gitnexus/: .gitignore  README.md
.omc/sessions/: b921ced2-48ef-4401-8132-1167e9f9a07a.json
.omc/skills/: understand-anything-slice-pipeline-expertise.md
.omc/state/: mission-state.json
.omc/ultragoal/: brief.md  goals.json  ledger.jsonl
.understand-anything/: .gitignore  README.md  fingerprints.json  fingerprints.slice-10a.json  fingerprints.slice-10b.json  fingerprints.slice-10c.json  fingerprints.slice-10d.json  fingerprints.slice-10e.json  fingerprints.slice-10f.json  fingerprints.slice-6a.json  fingerprints.slice-6b.json  meta.json  slice-1-knowledge-graph.json  slice-10a-knowledge-graph.json  slice-10b-knowledge-graph.json  slice-10c-knowledge-graph.json  slice-10d-knowledge-graph.json  slice-10e-knowledge-graph.json  slice-10f-knowledge-graph.json  slice-2-knowledge-graph.json  slice-3-knowledge-graph.json  slice-4-knowledge-graph.json  slice-5a-knowledge-graph.json  slice-5b-knowledge-graph.json  slice-6a-knowledge-graph.json  slice-6b-knowledge-graph.json  slice-6c-knowledge-graph.json  slice-7-knowledge-graph.json  slice-8-knowledge-graph.json  slice-9-knowledge-graph.json
benchmarks/: Dockerfile  package.json
benchmarks/docs/: QUICKSTART.md  README.md
crates/: agentic-robotics-README.md
crates/agentic-robotics-core/: README.md
crates/agentic-robotics-embedded/: README.md
crates/agentic-robotics-mcp/: README.md
crates/agentic-robotics-node/: README.md  package.json
crates/agentic-robotics-rt/: README.md
crates/cognitum-gate-kernel/: Cargo.toml
crates/cognitum-gate-tilezero/: Cargo.toml  README.md
crates/hailort-sys/: Cargo.toml
crates/mcp-brain/: Cargo.toml
crates/mcp-brain-server/: Cargo.toml  Cargo.workspace.toml
crates/micro-hnsw-wasm/: Cargo.toml
crates/neural-trader-strategies/: Cargo.toml
crates/prime-radiant/: Cargo.toml  README.md
crates/ruQu/: Cargo.toml  README.md
crates/ruos-thermal/: Cargo.toml
crates/ruvector-cognitum-host/: Cargo.toml  README.md
crates/ruvector-cognitum-host/deploy/: 70-cognitum-seed.rules  cognitum-fat.conf  cognitum-seed.nmconnection  install.sh  seed-doctor.sh
crates/ruvector-cognitum-host/src/: lib.rs
crates/ruvector-hailo/: Cargo.toml  deny.toml
crates/ruvector-hailo-cluster/: Cargo.toml  README.md  deny.toml
crates/ruvector-hailo-cluster/benches/: dispatch.rs
crates/ruvector-hailo-cluster/deploy/: compile-encoder-hef.py  compile-hef.sh  cross-build-bridges.sh  download-cpu-fallback-model.sh  download-encoder-hef.sh  export-minilm-encoder-onnx.py  install.sh  rebirth-clone.sh  ruvector-hailo-worker.service  ruvector-hailo.env.example  ruvector-mmwave-bridge.env.example  setup-hailo-compiler.sh
crates/ruvector-hailo-cluster/proto/: embedding.proto
crates/ruvector-hailo-cluster/src/: cache.rs  discovery.rs  error.rs  fingerprint.rs  grpc_transport.rs  health.rs  lib.rs  manifest_sig.rs  pool.rs  proto.rs  rate_limit.rs  shard.rs  tls.rs  transport.rs
crates/ruvector-hailo-cluster/tests/: bench_cli.rs  cluster_load_distribution.rs  dos_gates.rs  embed_cli.rs  mmwave_bridge_cli.rs  mmwave_bridge_tls.rs  pi_hardware_integration.rs  rate_limit_interceptor.rs  ruview_csi_bridge_cli.rs  ruvllm_bridge_cli.rs  stats_cli.rs  tls_roundtrip.rs
crates/ruvector-hailo-cluster/tests/common/: mod.rs
crates/ruvector-hailo/benches/: wordpiece_throughput.rs
crates/ruvector-hailo/deploy/: compile-csi-encoder-hef.py
crates/ruvector-hailo/models/: README.md
crates/ruvector-hailo/src/: cpu_embedder.rs  device.rs  error.rs  hef_embedder.rs  hef_pipeline.rs  host_embeddings.rs  inference.rs  lib.rs  tokenizer.rs
crates/ruvector-hailo/tests/: cpu_fallback_integration.rs  tokenizer_proptest.proptest-regressions  tokenizer_proptest.rs
crates/ruview-ruvllm-h10/: Cargo.toml  build.rs
crates/ruview-ruvllm-h10/deploy/: env.example  ruview-ruvllm-h10.service
crates/ruview-ruvllm-h10/src/: bridge.rs  main.rs
crates/ruvllm_sparse_attention/: Cargo.toml
crates/ruvllm_sparse_attention/examples/: esp32s3_smoke.rs  fastgrnn_gated_scaling.rs
crates/ruvllm_sparse_attention/src/: attention.rs  fastgrnn_gate.rs  lib.rs  model.rs
docs/: C2-shell-execution-hardening.md  INDEX.md  README.md  index.html
npm/: .eslintrc.json  README.md
patches/: agentdb+3.0.0-alpha.14.patch
scripts/: attractor.sh  create-brainpedia.py  funnel-to-memory.mjs  ingest-to-agentdb.mjs  install-gitnexus.sh  install-mempalace.sh  install-understand-anything.sh  setup-gcs-examples.sh  vendor-cognitum-one.sh
(+691 files in other folders)
