[package]
name = "hailort-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings for Hailo's HailoRT C library (ADR-167)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["hailo", "hailort", "ffi", "npu", "embedded"]
categories = ["external-ffi-bindings", "embedded"]
links = "hailort"      # tells cargo this crate links libhailort; prevents duplicate linkage

[features]
default = []
# `hailo` actually runs bindgen against the system <hailo/hailort.h> and
# links libhailort.so. Without it, the crate is an empty stub — useful for
# `cargo check` on x86 hosts without HailoRT installed.
hailo = []

# Standalone (excluded from the parent workspace until iteration 4 lands).
[workspace]

[build-dependencies]
bindgen = "0.71"

[dependencies]
