[package]
name = "ruvector-hailo-cluster"
version = "0.1.0"
edition = "2021"
description = "Multi-Pi cluster coordinator for ruvector Hailo embedding workers (ADR-167 §8)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["ruvector", "hailo", "cluster", "embedding", "edge-ai"]
categories = ["network-programming", "embedded"]

[features]
default = []
# `grpc` is reserved for future feature-gating; everything in proto/
# grpc_transport already builds unconditionally.
grpc = []
# `hailo` propagates to ruvector-hailo so the worker binary actually
# talks to /dev/hailo0. Default off so x86 dev hosts can still build.
hailo = ["ruvector-hailo/hailo"]

# Standalone (excluded from parent workspace until cluster crate joins).
[workspace]

[dependencies]
thiserror          = "2"
tonic              = { version = "0.12", default-features = false, features = ["codegen", "prost", "channel", "server"] }
prost              = "0.13"
tokio              = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-stream       = { version = "0.1", default-features = false, features = ["net"] }
futures-core       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
sha2               = "0.10"
ruvector-hailo     = { path = "../ruvector-hailo" }

[[bin]]
name = "ruvector-hailo-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "ruvector-hailo-embed"
path = "src/bin/embed.rs"

[[bin]]
name = "ruvector-hailo-fakeworker"
path = "src/bin/fakeworker.rs"

[[bin]]
name = "ruvector-hailo-stats"
path = "src/bin/stats.rs"

[[bin]]
name = "ruvector-hailo-cluster-bench"
path = "src/bin/bench.rs"

[build-dependencies]
tonic-build         = { version = "0.12", default-features = false, features = ["prost"] }
protoc-bin-vendored = "3"

[dev-dependencies]
anyhow       = "1"
tokio-stream = { version = "0.1", features = ["net"] }
criterion    = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "dispatch"
harness = false

# Ultra release profile (iter 82 SOTA pass).
#
# Trades compile time for runtime speed:
# - lto = "fat": cross-crate inlining including tonic + prost
# - codegen-units = 1: no parallel codegen → strongest optimisation per unit
# - panic = "abort": no unwinding → smaller code, fewer landingpads
# - strip = "symbols": shrinks binary; not strictly perf, but cuts deploy size
#
# Default `cargo build --release` still uses the fast-compile profile;
# opt in with `cargo build --profile=ultra` when you want the extra ~5-15%.
[profile.ultra]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
