[package]
name = "ruvllm_sparse_attention"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Subquadratic O(N log N) sparse attention kernel for Rust LLM inference on edge devices, with optional FastGRNN salience gating for near-linear O(N) scaling"
authors = ["ruvnet <ruv@ruv.net>"]
repository = "https://github.com/ruvnet/RuVector"
documentation = "https://docs.rs/ruvllm_sparse_attention"
homepage = "https://github.com/ruvnet/RuVector/tree/main/crates/ruvllm_sparse_attention"
readme = "README.md"
keywords = ["llm", "attention", "transformer", "inference", "edge"]
categories = ["algorithms", "science", "mathematics"]
rust-version = "1.77"

[features]
default = []
# Enable parallel head loops via rayon (~4× prefill speedup on multi-core).
parallel = ["dep:rayon"]
# Enable FP16 KV cache (halves KV memory; requires the `half` crate).
fp16 = ["dep:half"]

[dependencies]
rayon = { version = "1", optional = true }
half = { version = "2", optional = true }

[dev-dependencies]
# rand is only used in tests/benchmarks — keep zero runtime dep footprint (ADR-183)
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "attention_bench"
harness = false
